infrastructure/reservation-service/02-service.yml
apiVersion: v1
kind: Service
metadata:
 name: ms-reservation-service
#  annotations:
#     prometheus.io/port: "3002"
#     prometheus.io/path: "/metrics"
#     prometheus.io/scrape: "true"
spec:
 selector:
  app: ms-reservation
 ports:
 - name: ms-reservation-port
   port: 3002
   targetPort: 3002
