infrastructure/reservation-service/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-reservation
  labels:
    name: ms-reservation
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/res"
          backend:
            service:
              name: ms-reservation-service
              port: 
                number: 3001
